
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Improve Package Management to show changelog, more supports information in package browser
- [#4120] Fix issue where TV sort order is reset on Quick Update
- [#4115] Fix issue with modPhpThumb and filenames with + signs
- [#2719] Fix reset behavior on autotag/tag TV inputs
- [#3586] Adjust improper text on Content Types page
- [#2652] Fix issue where Element could be drag/dropped onto another Element in tree
- Add ability to select a blank value for ResourceList TV input type
- [#54] Fix issues with phpThumb and DOCUMENT_ROOT by adding a custom phpthumb_document_root System Setting
- [#4122] Fix order of execution of validation and plugin events for Element processors
- [#4105] Add Spanish translation
- Refactor duplicate alias checks into duplicate URI checks
- Cleanup deprecated code in Resource templates
- [#3765] Ensure entries editedon values are set when editing a Lexicon Entry
- Update ExtJS to 3.3.1
- [#4073] Add session_name, session_cookie_path, session_cookie_domain as System Settings with blank default values
- [#4077] Add resource_quick_create and resource_quick_update Permissions to restrict access to Quick actions on Resource tree
- [#4050] Add tree_show_resource_ids and tree_show_element_ids Permissions to show/hide IDs of Resources/Elements in tree panels
- Add username field to modTransportProvider, and send it and UUID to providers during transmissions
- [#3641] Add base URL for Help links in manager for easier management and customization of URLs
- [#3552] Fix issue causing list-xtype properties to be swapped when using drag/drop into field functionality
- [#4069] Ensure that you cannot delete the last User in the Administrator user group
- Add fix for ie9 to get tree nodes to work properly