@@ -121,6 +121,13 @@ Ext.extend(MODx.page.UpdateResource,MODx.Component,{
                 }]
             });
             btns.push('-');
+        } else {
+            btns.push({
+                text: cfg.lockedText || _('locked')
+                ,handler: Ext.emptyFn
+                ,disabled: true
+            });
+            btns.push('-');
         }
         if (cfg.canCreate == 1) {
             btns.push({
@@ -131,7 +138,7 @@ Ext.extend(MODx.page.UpdateResource,MODx.Component,{
             });
             btns.push('-');
         }
-        if (cfg.canDelete == 1) {
+        if (cfg.canDelete == 1 && !cfg.locked) {
             btns.push({
                 process: 'delete'
                 ,text: _('delete')
