@@ -117,7 +117,9 @@ Ext.onReady(function() {
         ,access_permissions: "'.$access_permissions.'"
         ,publish_document: "'.$publish_document.'"
         ,preview_url: "'.$url.'"
-        ,canSave: "'.($modx->hasPermission('save_document') ? 1 : 0).'"
+        ,locked: '.($locked ? 1 : 0).'
+        ,canSave: '.($canSave ? 1 : 0).'
+        ,lockedText: "'.$lockedText.'"
         ,canEdit: "'.($modx->hasPermission('edit_document') ? 1 : 0).'"
         ,canCreate: "'.($modx->hasPermission('new_document') ? 1 : 0).'"
         ,canDelete: "'.($modx->hasPermission('delete_document') ? 1 : 0).'"
