@@ -23,12 +23,17 @@ $context->prepare();
 
 /* check for locked status */
 $lockedBy = $resource->addLock($modx->user->get('id'));
+$canSave = $modx->hasPermission('save_document') ? 1 : 0;
+$locked = false;
+$lockedText = '';
 if (!empty($lockedBy) && $lockedBy !== true) {
-    $user = $modx->getObject('modUser', $lockedBy);
-    if ($user) {
-        $lockedBy = $user->get('username');
+    $canSave = false;
+    $locked = true;
+    $locker = $modx->getObject('modUser',$lockedBy);
+    if ($locker) {
+        $lockedBy = $locker->get('username');
     }
-    return $modx->error->failure($modx->lexicon('resource_locked_by', array('user' => $lockedBy, 'id' => $resource->get('id'))));
+    $lockedText = $modx->lexicon('resource_locked_by', array('user' => $lockedBy, 'id' => $resource->get('id')));
 }
 
 /* handle custom resource types */
@@ -159,7 +164,9 @@ Ext.onReady(function() {
         ,access_permissions: "'.$access_permissions.'"
         ,publish_document: "'.$publish_document.'"
         ,preview_url: "'.$url.'"
-        ,canSave: "'.($modx->hasPermission('save_document') ? 1 : 0).'"
+        ,locked: '.($locked ? 1 : 0).'
+        ,lockedText: "'.$lockedText.'"
+        ,canSave: '.($canSave ? 1 : 0).'
         ,canEdit: "'.($modx->hasPermission('edit_document') ? 1 : 0).'"
         ,canCreate: "'.($modx->hasPermission('new_document') ? 1 : 0).'"
         ,canDelete: "'.($modx->hasPermission('delete_document') ? 1 : 0).'"
