@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODx. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#65] Make locked Resources be read-only rather than unviewable
 - Improve Package Management to show changelog, more supports information in package browser
 - [#4120] Fix issue where TV sort order is reset on Quick Update
 - [#4115] Fix issue with modPhpThumb and filenames with + signs
